--- a/Symfony 4/config/packages/doctrine.yaml
+++ b/Symfony 4/config/packages/doctrine.yaml
@@ -20,6 +20,50 @@ doctrine:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        dql:
+            datetime_functions:
+              DAY: DoctrineExtensions\Query\Mysql\Day
+              MONTH: DoctrineExtensions\Query\Mysql\Month
+              YEAR: DoctrineExtensions\Query\Mysql\Year
+              time: DoctrineExtensions\Query\Mysql\Time
+              timediff: DoctrineExtensions\Query\Mysql\TimeDiff
+              timestampadd: DoctrineExtensions\Query\Mysql\TimestampAdd
+              timestampdiff: DoctrineExtensions\Query\Mysql\TimestampDiff
+              timetosec: DoctrineExtensions\Query\Mysql\TimeToSec
+              hour: DoctrineExtensions\Query\Mysql\Hour
+              dateadd: DoctrineExtensions\Query\Mysql\DateAdd
+              datesub: DoctrineExtensions\Query\Mysql\DateSub
+              datediff: DoctrineExtensions\Query\Mysql\DateDiff
+              day: DoctrineExtensions\Query\Mysql\Day
+              date_format: DoctrineExtensions\Query\Mysql\DateFormat
+              Regexp: DoctrineExtensions\Query\Mysql\Regexp
+            numeric_functions:
+                 acos: DoctrineExtensions\Query\Mysql\Acos
+                 asin: DoctrineExtensions\Query\Mysql\Asin
+                 atan2: DoctrineExtensions\Query\Mysql\Atan2
+                 atan: DoctrineExtensions\Query\Mysql\Atan
+                 bit_count: DoctrineExtensions\Query\Mysql\BitCount
+                 bit_xor: DoctrineExtensions\Query\Mysql\BitXor
+                 ceil: DoctrineExtensions\Query\Mysql\Ceil
+                 cos: DoctrineExtensions\Query\Mysql\Cos
+                 cot: DoctrineExtensions\Query\Mysql\Cot
+                 degrees: DoctrineExtensions\Query\Mysql\Degrees
+                 exp: DoctrineExtensions\Query\Mysql\Exp
+                 floor: DoctrineExtensions\Query\Mysql\Floor
+                 log: DoctrineExtensions\Query\Mysql\Log
+                 log10: DoctrineExtensions\Query\Mysql\Log10
+                 log2: DoctrineExtensions\Query\Mysql\Log2
+                 pi: DoctrineExtensions\Query\Mysql\Pi
+                 power: DoctrineExtensions\Query\Mysql\Power
+                 quarter: DoctrineExtensions\Query\Mysql\Quarter
+                 radians: DoctrineExtensions\Query\Mysql\Radians
+                 rand: DoctrineExtensions\Query\Mysql\Rand
+                 round: DoctrineExtensions\Query\Mysql\Round
+                 stddev: DoctrineExtensions\Query\Mysql\StdDev
+                 sin: DoctrineExtensions\Query\Mysql\Sin
+                 std: DoctrineExtensions\Query\Mysql\Std
+                 tan: DoctrineExtensions\Query\Mysql\Tan
+                 variance: DoctrineExtensions\Query\Mysql\Variance
         mappings:
             App:
                 is_bundle: false
